--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Yu Yamaguchi - Science and Data
+title: Y - Science and Data
 
 # Short description of your site
 description: Projects and writings
